--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "express": "^4.18.1",
         "extract-zip": "^2.0.1",
         "aryan-nix-fca": "latest",
+        "fca-sagor-vex": "^1.3.34",
         "fca-h4m1m-x2": "^1.5.6",
         "fca-horizon-remake": "0.0.1-security",
         "figlet": "^1.5.2",
